--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,4 +3,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  max-width: 100%;
+}
+
+.video {
+  max-width: 100%;
 }
